[package]
name = "bookstack-exporter"
version = "0.1.0"
edition = "2021"
description = "Export a BookStack instance as a hierarchy of files"
repository = "https://github.com/egeldenhuys/bookstack-exporter"
license = "MIT"
keywords = ["bookstack"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
color-print = "0.3.5"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confique = "0.2.4"
